fixed signup page layout issues

--- a/libsrc/scss/settings.scss
+++ b/libsrc/scss/settings.scss
@@ -49,7 +49,6 @@
       }
     }
     input[type=submit]{
-        float: right;
     }
     .checkbox {
         margin-top: 5px;
